<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/network_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#7F999999"
        android:textSize="18sp"
        android:text="@string/network_type_text" />
    
    <Button
        android:id="@+id/setting_3g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/network_type_text"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_3g" />
    
    <LinearLayout
        android:id="@+id/network_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_3g"
        android:layout_centerHorizontal="true" >
        <RadioButton
            android:id="@+id/network_dhcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:text="@string/network_dhcp" />
        <RadioButton
	        android:id="@+id/network_pppoe"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/network_pppoe" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/network_type_ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/network_type"
        android:layout_centerHorizontal="true" >
        <RadioButton
            android:id="@+id/network_wifi_repeater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:text="@string/network_wifi_repeater" />
        <RadioButton
	        android:id="@+id/network_static"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="23dp"
	        android:text="@string/network_static" />
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/network_type_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/network_type_ex"/>
    
    <Button
        android:id="@+id/commit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/network_type_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/commit" />
</RelativeLayout>

</ScrollView>