<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
        android:id="@+id/function1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/status"
            android:text="@string/status"/>
        <TextView 
            android:id="@+id/wifi_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@drawable/wifi_setting"
            android:text="@string/wireless_setting"/>
    </LinearLayout>

        
    <LinearLayout
        android:id="@+id/function2"
        android:layout_width="match_parent"
        android:layout_below="@+id/function1"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/network_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/network_setting"
            android:text="@string/network_setting"/>
        <TextView 
            android:id="@+id/media_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@drawable/media_share"
            android:text="@string/media_share"/>        
    </LinearLayout>
    
        
    <LinearLayout
        android:id="@+id/function3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/function2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"> 
        <TextView 
            android:id="@+id/dlna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/advance_setting"
            android:text="@string/dlna"/>
        <TextView 
            android:id="@+id/app_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:drawableTop="@drawable/app_setting"
            android:text="@string/app_setting"/>        
    </LinearLayout>
    
</RelativeLayout>