<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/usb_3g_modem_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/usb_3g_modem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_3g_modem" />
        
        <TextView
	        android:id="@+id/usb_3g_modem"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usb_3g_modem_view"
        android:layout_marginTop="5dp"       
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_3g_modem_status" />
        
        <TextView
	        android:id="@+id/status"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>

        <Button
            android:id="@+id/usb_3g_modem_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/usb_3g_modem_connect" />

    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/dial_mode_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_view"
        android:layout_marginTop="5dp"   
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView
		        android:id="@+id/dial_mode_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/usb_3g_modem_dial_mode" />
		    
		    <Spinner
		     android:id="@+id/dial_mode"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"/>
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/duration_view"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone">
		  	<EditText
			     android:id="@+id/duration"
			     android:layout_width="wrap_content"
			     android:layout_height="wrap_content"
			     android:layout_marginLeft="60dp"
			     android:maxLength="3"
			     android:singleLine="true"
		     	 android:ems="3">
	    	</EditText>
	    	
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/usb_3g_modem_dial_duration" />
		</LinearLayout>
    </LinearLayout>
    
    <TextView
        android:id="@+id/dial_parameters_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dial_mode_view"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="#7F999999"
        android:textSize="18sp"
        android:text="@string/usb_3g_modem_dial_parameters" />
    
    <RelativeLayout
        android:id="@+id/dial_parameters_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dial_parameters_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
	        android:id="@+id/user_name_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/user_name_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/user_name" />
	        
	        <EditText
		        android:id="@+id/user_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" >
		    </EditText>
	   </LinearLayout>
       <LinearLayout
	        android:id="@+id/token_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/user_name_view">
	        <TextView
	            android:id="@+id/token_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/token" />
	        
	        <EditText
		        android:id="@+id/token"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="14dp"
		        android:ems="10" >
		    </EditText>
	   </LinearLayout>
       <LinearLayout
	        android:id="@+id/dial_number_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/token_view">
	        <TextView
	            android:id="@+id/dial_number_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/dial_number" />
	        
	        <EditText
		        android:id="@+id/dial_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="9" >
		    </EditText>
	  </LinearLayout>
      <LinearLayout
	        android:id="@+id/apn_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/dial_number_view">
	        <TextView
	            android:id="@+id/apn_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/apn_name" />
	        
	        <EditText
		        android:id="@+id/apn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:ems="10" >
		    </EditText>
	  </LinearLayout>
	  
	  <LinearLayout
	        android:id="@+id/pin_number_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/apn_view">
	        <TextView
	            android:id="@+id/pin_number_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pin_number" />
	        
	        <EditText
		        android:id="@+id/pin_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:ems="10" >
		    </EditText>
	  </LinearLayout> 
	  
	  <LinearLayout
	        android:id="@+id/auth_type_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/pin_number_view">
	        <TextView
	            android:id="@+id/auth_type_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/auth_type" />
	        
	        <Spinner
		        android:id="@+id/auth_type"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
	  </LinearLayout>
	  	       
    </RelativeLayout>
    
    <Button
        android:id="@+id/commit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dial_parameters_detail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/commit" />
</RelativeLayout>

</ScrollView>