<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout 
        android:id="@+id/login_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="106dp"
        android:layout_marginRight="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
	        android:id="@+id/user_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_name" />

	    <EditText
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="12">
	        <requestFocus />
	    </EditText>
    </LinearLayout>
   
    <LinearLayout 
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name"
        android:layout_alignLeft="@+id/login_name"
        android:gravity="center_vertical"
        android:layout_marginRight="36dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/user_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_password" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="12dp"
	        android:ems="12"/>
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/login_password"
	   	android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <CheckBox
	        android:id="@+id/remember_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="48dp"
	        android:text="@string/remember_name" />

    	<CheckBox
	        android:id="@+id/remember_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="12dp"
	        android:text="@string/remember_password" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remember"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

</RelativeLayout>